# nostrdmtracker

./: .env  Cargo.toml  README.md  docker-compose.yaml  justfile
migrations/: 20230717022915_create_metadata_tables.down.sql  20230717022915_create_metadata_tables.up.sql  20230717024904_dms.down.sql  20230717024904_dms.up.sql
src/: db.rs  http.rs  main.rs  nostr.rs
