[package]
edition = "2021"
name = "nostrdmtracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
base64 = "0.21.2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.19"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", rev = "8de9228e313ba7eacdd1106e308dc974f16e03b9" }
sqlx = { version = "0.7.1", features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "time",
] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
